LaTex/KaTeX overflow fix

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -513,3 +513,11 @@ ol.overflow {
     padding-left: 1rem;
   }
 }
+
+.katex-display {
+  overflow-x: auto;
+}
+
+.katex .base, .katex .strut {
+  display: inline;
+}
